--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,63 @@
 alembic==1.5.4
 aniso8601==8.1.1
 attrs==20.3.0
+backcall==0.2.0
 bcrypt==3.2.0
+certifi==2020.12.5
 cffi==1.14.5
+chardet==4.0.0
 click==7.1.2
+decorator==5.0.7
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
+Flask-Cors==3.0.10
 Flask-Migrate==2.6.0
 flask-restx==0.2.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.4
 Flask-Testing==0.8.1
+idna==2.10
 importlib-metadata==3.4.0
+ipykernel==5.5.3
+ipython==7.23.0
+ipython-genutils==0.2.0
 itsdangerous==1.1.0
+jedi==0.18.0
 Jinja2==2.11.3
+joblib==1.0.1
 jsonschema==3.2.0
+jupyter-client==6.1.12
+jupyter-core==4.7.1
 Mako==1.1.4
 MarkupSafe==1.1.1
+matplotlib-inline==0.1.2
+numpy==1.20.2
+pandas==1.2.4
+parso==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.18
+psycopg2==2.8.6
+ptyprocess==0.7.0
 pycparser==2.20
+Pygments==2.8.1
 PyJWT==2.0.1
 pyrsistent==0.17.3
 python-dateutil==2.8.1
+python-dotenv==0.17.1
 python-editor==1.0.4
 pytz==2021.1
+pyzmq==22.0.3
+requests==2.25.1
+scikit-learn==0.24.2
+scipy==1.6.3
 six==1.15.0
 SQLAlchemy==1.3.23
+threadpoolctl==2.1.0
+tornado==6.1
+traitlets==5.0.5
 typing-extensions==3.7.4.3
+urllib3==1.26.4
+wcwidth==0.2.5
 Werkzeug==1.0.1
 zipp==3.4.0
