--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ Flask==1.1.2
 Flask-Bcrypt==0.7.1
 Flask-Cors==3.0.10
 Flask-Migrate==2.6.0
-flask-restx==0.2.0
+flask-restx>=0.5.1
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.4
 Flask-Testing==0.8.1
